--- a/app.json
+++ b/app.json
@@ -60,17 +60,17 @@
       },
            "URL_1LINK": {
             "description": "",
-            "value": "https://www.instagram.com/__.sanuwa.__/" ,
+            "value": "https://www.instagram.com/lashmika_heshan_/?fbclid=IwAR2UNwvkAbTozPPw4J7XpI9bSAlXbN_9U_Nlp13eQiS10hy7tOrtrfwVkKI" ,
             "required": true
       },
      "URL_2NAME": {
             "description": "",
-            "value": "💻GITHUB💻" ,
+            "value": "💻Facebook💻" ,
             "required": true
       },
        "URL_2LINK": {
             "description": "",
-            "value": "https://github.com/sanuwaofficial" ,
+            "value": "https://www.facebook.com/LashmikaHeshan00" ,
             "required": true
       },
        "FOOTER": {
@@ -85,7 +85,7 @@
       },
        "CAPTION": {
             "description": "",
-            "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 𝙰𝚀𝚄𝙰 ²⁰²²" ,
+            "value": "© 𝙶𝙴𝙽𝙴𝚁𝙰𝚃𝙴𝙳 𝙱𝚈 Lucky ²⁰²3" ,
             "required": true
       },
        "INBOX_BLOCK": {
